<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="NestedWeights"
    android:layout_gravity="start"
    android:gravity="start"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/buttons">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:layout_gravity="center_vertical">

            <ImageView
                android:clickable="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/hamburguer_btn"
                android:layout_gravity="center_vertical|end"
                android:src="@drawable/hamburger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btn_minimize"
            android:onClick="onClick"
            android:layout_margin="10dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_minimizar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_text"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="@drawable/et_background"
                android:hint="@string/_0"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <EditText
                android:hint="@string/_20"
                android:id="@+id/edit_text_base"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="@drawable/et_background"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@string/_20" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_invertir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_view"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="10dp"
            android:layout_weight="0.75"
            android:gravity="bottom|end"
            android:hint="@string/_0"
            android:importantForAutofill="no"
            android:padding="20dp"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_7"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:text="@string/_7" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_8"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:text="@string/_8" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_9"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:text="@string/_9" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_4"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:text="@string/_4" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_5"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:text="@string/_5" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_6"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:text="@string/_6" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_1"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:text="@string/_1" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_2"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:text="@string/_2" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_3"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:text="@string/_3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_0"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:text="@string/_0" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_point"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:text="@string/point" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/delete"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/delete" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/_r"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/r" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>