<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="NestedWeights"
    android:layout_gravity="start"
    android:gravity="start"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearLayout2s"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/linearLayouts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/dark_gray">
        <ImageView
            android:id="@+id/btn_transparence"
            android:padding="9dp"
            android:onClick="onClick"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical|start"
            android:src="?android:attr/textSelectHandle"/>
        <ImageView
            android:id="@+id/btn_minimizes"
            android:padding="8dp"
            android:onClick="onClick"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_minimizar"/>
        <ImageView
            android:id="@+id/btn_close"
            android:padding="5dp"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_cerrar"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayouts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2s">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                style="@style/EditTextStyle"
                android:background="@drawable/little_et_background"
                android:hint="@string/_0"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/edit_texts"
                android:importantForAutofill="no"/>
            <EditText
                style="@style/EditTextStyle"
                android:background="@drawable/little_et_background"
                android:id="@+id/edit_text_bases"
                android:text="@string/_20"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:importantForAutofill="no"/>
            <CheckBox
                android:id="@+id/cb_invertirs"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:hint="@string/_0"
            android:layout_weight="0.75"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:padding="20dp"
            android:layout_margin="10dp"
            style="@style/EditTextStyle"
            android:textSize="40sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/text_views"
            android:importantForAutofill="no"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    >
                    <androidx.appcompat.widget.AppCompatButton
                        android:text="@string/_7"
                        style="@style/ButtonStyle"
                        android:id="@+id/btn_7s"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:text="@string/_8"
                        style="@style/ButtonStyle"
                        android:id="@+id/btn_8s"
                        android:onClick="onClick"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:text="@string/_9"
                        style="@style/ButtonStyle"
                        android:id="@+id/btn_9s"
                        android:onClick="onClick"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    >
                    <androidx.appcompat.widget.AppCompatButton
                        android:text="@string/_4"
                        style="@style/ButtonStyle"
                        android:id="@+id/btn_4s"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:text="@string/_5"
                        android:onClick="onClick"
                        style="@style/ButtonStyle"
                        android:id="@+id/btn_5s"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:text="@string/_6"
                        android:id="@+id/btn_6s"
                        style="@style/ButtonStyle"
                        android:onClick="onClick"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    >
                    <androidx.appcompat.widget.AppCompatButton
                        android:text="@string/_1"
                        android:id="@+id/btn_1s"
                        android:layout_weight="1"
                        style="@style/ButtonStyle"
                        android:onClick="onClick"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:text="@string/_2"
                        style="@style/ButtonStyle"
                        android:id="@+id/btn_2s"
                        android:onClick="onClick"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:text="@string/_3"
                        style="@style/ButtonStyle"
                        android:id="@+id/btn_3s"
                        android:onClick="onClick"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    >
                    <androidx.appcompat.widget.AppCompatButton
                        android:text="@string/_0"
                        android:id="@+id/btn_0s"
                        style="@style/ButtonStyle"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:text="@string/point"
                        android:id="@+id/btn_points"
                        android:layout_weight="1"
                        style="@style/ButtonStyle"
                        android:onClick="onClick"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/ButtonStyle"
                    android:onClick="onClick"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:id="@+id/deletes"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:onClick="onClick"
                    android:layout_height="match_parent"
                    style="@style/ButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/r"
                    android:id="@+id/_rs"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_shadow"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" />
    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/ll_transparence"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2s"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:background="@color/almostalmostBlack">
        <SeekBar
            android:id="@+id/sb_transparence"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>